# yolov8_rknn_ros

./: README.md
rknn_yolov8_ros/: CMakeLists.txt  package.xml
rknn_yolov8_ros/include/: config.h.in
rknn_yolov8_ros/launch/: yolov8_ros.launch
rknn_yolov8_ros/src/: main.cpp
